--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3000
-spring.datasource.url= jdbc:postgresql://localhost:5432/narxoz
+spring.datasource.url= jdbc:postgresql://localhost:5432/narxoz-db
 spring.datasource.username=postgres
 spring.datasource.password=adina2004
 
